[package]
name = "adjust_fov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.21.0"
winapi = {version = "0.3.9", features = ["everything"]}
lazy_static = "1.4.0"


[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"

[build]
rustflags = ["-C", "link-args=asm/FovAdjust.obj"]