[package]
name = "camera_fix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mod_utils ={path = "../mod_utils"}
rust-ini = "0.21.0"
winapi = {version = "0.3.9", features = ["everything"]}


[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"