[package]
name = "mod_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["everything"]}
lazy_static = "1.4.0"

[lib]
name="mod_utils"
path = "src/lib.rs"
edition = "2021"